@@ -32,19 +32,19 @@ $namespaceNames = array(
 );
 
 $digitTransformTable = array(
-	"0" => "۰",
-	"1" => "۱",
-	"2" => "۲",
-	"3" => "۳",
-	"4" => "۴",
-	"5" => "۵",
-	"6" => "۶",
-	"7" => "۷",
-	"8" => "۸",
-	"9" => "۹",
-	"%" => "٪",
-	"." => "٫", // wrong table?
-	"," => "٬"
+	'0' => '۰', # &#x06f0;
+	'1' => '۱', # &#x06f1;
+	'2' => '۲', # &#x06f2;
+	'3' => '۳', # &#x06f3;
+	'4' => '۴', # &#x06f4;
+	'5' => '۵', # &#x06f5;
+	'6' => '۶', # &#x06f6;
+	'7' => '۷', # &#x06f7;
+	'8' => '۸', # &#x06f8;
+	'9' => '۹', # &#x06f9;
+	'%' => '٪', # &#x066a;
+	'.' => '٫', # &#x066b; wrong table?
+	',' => '٬', # &#x066c;
 );
 
 $rtl = true;
