@@ -7,16 +7,16 @@
   */
 
 $digitTransformTable = array(
-	'0' => '൦',
-	'1' => '൧',
-	'2' => '൨',
-	'3' => '൩',
-	'4' => '൪',
-	'5' => '൫',
-	'6' => '൬',
-	'7' => '൭',
-	'8' => '൮',
-	'9' => '൯'
+	'0' => '൦', # &#x0d66;
+	'1' => '൧', # &#x0d67;
+	'2' => '൨', # &#x0d68;
+	'3' => '൩', # &#x0d69;
+	'4' => '൪', # &#x0d6a;
+	'5' => '൫', # &#x0d6b;
+	'6' => '൬', # &#x0d6c;
+	'7' => '൭', # &#x0d6d;
+	'8' => '൮', # &#x0d6e;
+	'9' => '൯', # &#x0d6f;
 );
 
 ?>
